--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,3 +1,11 @@
-# FROM node:16.14-alpine
-# WORKDIR /app-backend
-#  ...
+FROM node:16.14-alpine
+
+WORKDIR /app-backend
+
+EXPOSE 3001
+
+COPY ./ /app-backend/
+
+RUN npm install
+
+CMD [ "npm", "start" ]
