--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,3 +1,11 @@
-# FROM node:16.14-alpine
-# WORKDIR /app-frontend
-#  ...
+FROM node:16.14-alpine
+
+WORKDIR /app-frontend
+
+EXPOSE 3000
+
+COPY ./ /app-frontend/
+
+RUN npm install
+
+CMD [ "npm", "start" ]
