--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -4,8 +4,10 @@ WORKDIR /app-backend
 
 EXPOSE 3001
 
-COPY ./ /app-backend/
+COPY package*.json ./
 
 RUN npm install
+
+COPY . .
 
 CMD [ "npm", "start" ]
