--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -56,7 +56,8 @@
     "cors": "2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
-    "http-status-code": "^2.1.0",
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
     "jest": "27.4.3",
     "jsonwebtoken": "8.5.1",
     "mysql2": "2.3.3",
